feat: update document titles and meta descriptions across multiple pages for improved SEO

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Expenser</title>
+  <title>Expenser - Track Expenses & Manage Your Budget</title>
+  <meta name="description"
+    content="Expenser is a modern expense tracking app to help you manage your finances, track spending, and gain insights into your budget. Simple, secure, and powerful." />
+
+  <!-- SEO Meta Tags -->
+  <meta name="keywords"
+    content="expense tracker, budget manager, finance app, spending tracker, expense management, personal finance" />
+  <meta name="author" content="Shakil Ahmed" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Expenser - Track Expenses & Manage Your Budget" />
+  <meta property="og:description"
+    content="Expenser is a modern expense tracking app to help you manage your finances, track spending, and gain insights into your budget." />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Expenser" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Expenser - Track Expenses & Manage Your Budget" />
+  <meta name="twitter:description"
+    content="Expenser is a modern expense tracking app to help you manage your finances, track spending, and gain insights into your budget." />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#3b82f6" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MMJ960HSSC"></script>
