feat: update PWA icons and manifest for improved mobile compatibility and design

--- a/public/offline.html
+++ b/public/offline.html
@@ -3,6 +3,23 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#111827">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#111827">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Offline - Expenser</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -19,7 +36,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: #1a202c;
       color: white;
       text-align: center;
       padding: 20px;
@@ -106,9 +123,8 @@
   <div class="container">
     <div class="icon">
       <svg viewBox="0 0 24 24">
-        <path d="M1 1h15M1 7h15M1 13h15" />
-        <path d="M16 4l3 3l-3 3" />
-        <circle cx="12" cy="19" r="3" />
+        <path d="M17 14h.01" />
+        <path d="M7 7h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14" />
       </svg>
     </div>
     <h1>You're Offline</h1>
